update:移动端初始化配置

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "vite-plugin-style-import": "^2.0.0",
     "vite-plugin-vue-images": "^0.6.1",
     "vite-plugin-vue-setup-extend": "^0.4.0",
-    "vue-tsc": "^0.40.13"
+    "vue-tsc": "^0.40.13",
+    "vite-plugin-svg-icons": "^2.0.1"
   }
 }
