--- a/package.json
+++ b/package.json
@@ -13,19 +13,22 @@
     "lint:eslint": "eslint --cache --max-warnings 0  \"{src,mock}/**/*.{vue,ts,tsx}\" --fix",
     "lint:prettier": "prettier --write  \"src/**/*.{js,json,tsx,css,less,scss,vue,html,md}\"",
     "lint:stylelint": "stylelint --cache --fix \"**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
-    "lint:lint-staged": "lint-staged"
+    "lint:lint-staged": "lint-staged",
+    "prepare": "husky install",
+    "deps": "yarn upgrade-interactive --latest"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.9",
     "@vueuse/components": "^9.2.0",
     "@vueuse/core": "^9.2.0",
     "axios": "^0.27.2",
+    "element-plus": "^2.2.16",
     "pinia": "^2.0.22",
     "pinia-plugin-persistedstate": "^2.1.1",
     "qs": "^6.11.0",
     "vue": "^3.2.39",
     "vue-global-api": "^0.4.1",
-    "vue-router": "^4.1.5",
-    "vant": "3.6.2"
+    "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@types/nprogress": "^0.2.0",
@@ -35,9 +38,16 @@
     "@vitejs/plugin-vue": "^3.1.0",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
     "autoprefixer": "^10.4.8",
+    "eslint": "^8.23.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-define-config": "^1.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.4.0",
+    "husky": "^8.0.1",
     "import": "^0.0.6",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
+    "lint-staged": "^13.0.3",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
     "plop": "^3.1.1",
@@ -47,11 +57,17 @@
     "postcss-px-to-viewport": "^1.1.1",
     "prettier": "^2.7.1",
     "rollup-plugin-visualizer": "^5.8.1",
+    "stylelint": "^14.11.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recommended": "^9.0.0",
+    "stylelint-config-recommended-vue": "^1.4.0",
+    "stylelint-config-standard": "^28.0.0",
+    "stylelint-order": "^5.0.0",
     "typescript": "4.8.2",
     "unocss": "^0.45.18",
     "unplugin-auto-import": "^0.11.2",
     "unplugin-icons": "^0.14.9",
-    "unplugin-vue-components": "^0.22.7",
+    "unplugin-vue-components": "^0.22.4",
     "vite": "^3.1.0",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-html": "^3.2.0",
@@ -62,9 +78,41 @@
     "vite-plugin-progress": "^0.0.3",
     "vite-plugin-restart": "^0.2.0",
     "vite-plugin-style-import": "^2.0.0",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vue-images": "^0.6.1",
     "vite-plugin-vue-setup-extend": "^0.4.0",
-    "vue-tsc": "^0.40.13",
-    "vite-plugin-svg-icons": "^2.0.1"
+    "vue-tsc": "^0.40.13"
+  },
+  "resolutions": {
+    "bin-wrapper": "npm:bin-wrapper-china"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "{!(package)*.json,*.code-snippets,.!(browserslist)*rc}": [
+      "prettier --write--parser json"
+    ],
+    "package.json": [
+      "prettier --write"
+    ],
+    "*.vue": [
+      "eslint --fix",
+      "prettier --write",
+      "stylelint --fix"
+    ],
+    "*.{scss,less,styl,html}": [
+      "stylelint --fix",
+      "prettier --write"
+    ],
+    "*.md": [
+      "prettier --write"
+    ]
   }
 }
